# cv

./: 404.html  README.md  education.html  index.html  mkdocs.yml  others.html  professional.html  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
docs/en/: index.md
docs/fr/: index.md
docs/pt/: education.md  index.md  others.md  professional.md
education/: index.html
en/: education.html  index.html  others.html  professional.html
en/education/: index.html
en/others/: index.html
en/professional/: index.html
fr/: education.html  index.html  others.html  professional.html
fr/education/: index.html
fr/others/: index.html
fr/professional/: index.html
others/: index.html
professional/: index.html
